force-app/main/default/objects/DC_Report_Ids__c/DC_Report_Ids__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Provides Ids to link to Daily Comparative and OTIF Reports</description>
    <label>DC and OTIF Report Ids</label>
</CustomObject>