force-app/main/default/objects/DC_Report_Ids__c/fields/DC_Customer_Tonnage_Current_Month__c.field-meta.xml
<CustomField>
    <fullName>DC_Customer_Tonnage_Current_Month__c</fullName>
    <label>DC Customer Tonnage Current Month</label>
    <length>18</length>
    <type>Text</type>
</CustomField>