force-app/main/default/objects/DC_Report_Ids__c/fields/OTIF_Current_Month_Collapsed_Load_List__c.field-meta.xml
<CustomField>
    <fullName>OTIF_Current_Month_Collapsed_Load_List__c</fullName>
    <label>OTIF Current Month Collapsed Load List</label>
    <length>18</length>
    <type>Text</type>
</CustomField>