force-app/main/default/objects/DC_Report_Ids__c/fields/OTIF_Previous_48Hour_Late_Load_List__c.field-meta.xml
<CustomField>
    <fullName>OTIF_Previous_48Hour_Late_Load_List__c</fullName>
    <label>OTIF Previous 48Hour Late Load List</label>
    <length>18</length>
    <type>Text</type>
</CustomField>